--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "framer-motion": "^12.23.11",
     "i18next": "^25.3.2",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
